--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = {extras = ["jupyter"], version = "^23.7.0"}
 isort = "^5.12.0"
 mypy = "^1.5.0"
 pytest = "^7.4.0"
+wandb = "^0.16.3"
 
 [tool.poetry.group.eda.dependencies]
 jupyter = "^1.0.0"
