--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10,<4.0"
 langchain = "^0.1.4"
 langchain-experimental = "^0.0.49"
 langchain-openai = "^0.0.5"
+langgraph = "^0.0.24"
 
 
 [tool.poetry.group.dev.dependencies]
