--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,9 @@ version = "0.1.0"
 description = ""
 authors = []
 license = "MIT"
-readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
+python = ">=3.11,<4.0"
 langchain = "^0.1.4"
 langchain-experimental = "^0.0.49"
 langchain-openai = "^0.0.5"
@@ -20,6 +19,7 @@ isort = "^5.12.0"
 mypy = "^1.5.0"
 pytest = "^7.4.0"
 wandb = "^0.16.3"
+grandalf = "^0.8"
 
 [tool.poetry.group.eda.dependencies]
 jupyter = "^1.0.0"
