--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,17 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0"
 langchain = "^0.1.4"
+langchain-core = "^0.1.30"
+langgraph = "^0.0.26"
+
+[tool.poetry.group.examples.dependencies]
 langchain-experimental = "^0.0.49"
 langchain-openai = "^0.0.5"
-langgraph = "^0.0.24"
-
+jupyter = "^1.0.0"
+pandas = "^2.0.3"
+matplotlib = "^3.7.2"
+seaborn = "^0.12.2"
+pygraphviz = "^1.12"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.7.0"}
@@ -20,12 +27,6 @@ mypy = "^1.5.0"
 pytest = "^7.4.0"
 wandb = "^0.16.3"
 grandalf = "^0.8"
-
-[tool.poetry.group.eda.dependencies]
-jupyter = "^1.0.0"
-pandas = "^2.0.3"
-matplotlib = "^3.7.2"
-seaborn = "^0.12.2"
 
 [build-system]
 requires = ["poetry-core"]
