--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.11,<4.0"
 langchain = "^0.1.4"
 langchain-core = "^0.1.30"
 langgraph = "^0.0.26"
+gymnasium = "^0.29.1"
 
 [tool.poetry.group.examples.dependencies]
 langchain-experimental = "^0.0.49"
