--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ jupyter = "^1.0.0"
 pandas = "^2.0.3"
 matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
+gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.7.0"}
@@ -27,6 +28,7 @@ mypy = "^1.5.0"
 pytest = "^7.4.0"
 wandb = "^0.16.3"
 grandalf = "^0.8"
+ruff = "^0.3.2"
 
 [build-system]
 requires = ["poetry-core"]
