Polish Reflexion & tool execution
Switch from custom tool calling methods to ToolExecutor from LangGraph (bc I didn't know how to configure callbacks in custom methods to make it render beautifully in LangSmith)

Use BaseChatMessageHistory for self-reflections instead of a simple in-memory option

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -25,6 +25,10 @@ jobs:
         run: |
           poetry run ruff check
 
+      - name: Check formatting with ruff
+        run: |
+          poetry run ruff format --check
+
       - name: Check types with mypy
         run: |
           poetry run mypy .
