--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pandas = "^2.0.3"
 matplotlib = "^3.7.2"
 seaborn = "^0.12.2"
 gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
+moviepy = "^1.0.3"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.7.0"}
