Fix formatting and typing issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,26 +25,29 @@ moviepy = "^1.0.3"
 alfworld = {extras = ["full"], version = "^0.3.3"}
 
 [tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = "^23.7.0"}
 isort = "^5.12.0"
 mypy = "^1.5.0"
 pytest = "^7.4.0"
 wandb = "^0.16.3"
 grandalf = "^0.8"
 ruff = "^0.3.2"
+pyright = "^1.1.368"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.black]
+[tool.ruff]
 line-length = 120
-target-version = ["py310"]
+target-version = "py310"
+
+[tool.ruff.lint]
+extend-select = ["I"]
 
 [tool.isort]
-line_length = 120
-py_version = 310
 profile = "black"
+force_sort_within_sections = true
+order_by_type = true
 
 [tool.mypy]
 python_version = "3.9"
