--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -23,12 +23,16 @@ jobs:
 
       - name: Lint with ruff
         run: |
-          poetry run ruff check
+          poetry run ruff check --config pyproject.toml
 
       - name: Check formatting with ruff
         run: |
-          poetry run ruff format --check
+          poetry run ruff format --check --config pyproject.toml
 
       - name: Check types with mypy
         run: |
-          poetry run mypy .
+          poetry run mypy . --config-file pyproject.toml
+
+      - name: Check types with pyright
+        run: |
+          poetry run pyright
